# darwinsoft

./: README.md  docker-compose.yml  pyproject.toml  test-python-junior.md
src/: common.py  crud.py  db.py  main.py  models.py  schemas.py
tests/: test_db.py  test_endpoints.py
